# cmake-c-project

./: .gitignore  CMakeLists.txt  auto_build.sh  readme.md
cmake/: install.cmake  test.cmake
doc/doxygen/: Doxyfile
src/: CMakeLists.txt  add.c  add.h
test/: CMakeLists.txt  test_add.c
